# HyprView

./: .deepsource.toml  .gitignore  .qmlls.ini  CMakeLists.txt  Makefile  README.md  ci.yml  compile_commands_cmake.sh  coverage.json  cppcheck-qt.cfg  default.nix  flake.nix  shell.nix  sonar-project.properties
.github/workflows/: ci.yml
include/hyprview_core/enums/: transform.h
include/hyprview_core/managers/: monitor_manager.h
include/hyprview_core/models/: monitor.h
include/hyprview_core/parsers/: hypr_monitor_parser.h  monitor_parser.h
include/hyprview_core/utils/: hypr_monitor_parser.h  logger.h  monitor_geometry.h  monitor_helpers.h
lib/hyprview_core/managers/: monitor_manager.cpp
lib/hyprview_core/models/: monitor.cpp
lib/hyprview_core/parsers/: hypr_monitor_parser.cpp
lib/hyprview_core/utils/: hypr_monitor_parser.cpp  monitor_geometry.cpp  monitor_helpers.cpp
src/: main.cpp
src/components/: main_layout.cpp  main_layout.h  monitor_details.cpp  monitor_details.h  monitor_item.cpp  monitor_item.h  monitor_view.cpp  monitor_view.h
src/core/models/: monitor.cpp  monitor.h
src/core/models/enums/: transform.h
src/core/utils/: hypr_monitor_parser.cpp  hypr_monitor_parser.h  monitor_geometry.cpp  monitor_geometry.h  monitor_helpers.cpp  monitor_helpers.h  monitor_parser.h  monitor_snap_helper.cpp  monitor_snap_helper.h
src/managers/: hypr_monitor_manager.cpp  hypr_monitor_manager.h
src/models/: monitor.cpp  monitor.h
src/models/enums/: transform.cpp  transform.h
src/qml/: AppMenuBar.qml  Main.qml  MonitorDetails.qml  MonitorPreview.qml  main.qml  qml.qrc  qml_transform_helper.h
src/qml/components/: AppMenuBar.qml  ButtonBar.qml  MonitorCheckbox.qml  MonitorDetails.qml  MonitorNumericField.qml  MonitorPreview.qml
src/qml/details/: MonitorDetails.qml  MonitorDetailsEditableFields.qml  MonitorDetailsReadOnlyFields.qml
src/qml/dialogs/: ConfirmDialog.qml
src/qml/preview/: MonitorPreview.qml  MonitorRectangle.qml
src/qml/screens/: MainScreen.qml  MonitorScreen.qml
src/qtbridge/: qml_monitor.cpp  qml_monitor.h  qml_monitor_helpers.cpp  qml_monitor_helpers.h  qml_monitor_manager.cpp  qml_monitor_manager.h  qml_transform_helper.h
src/services/: hypr_monitor_manager.cpp  hypr_monitor_manager.h  monitor_manager.h
src/ui/: main_layout.ui  main_window.cpp  main_window.h  monitor_details.cpp  monitor_details.h  monitor_details.ui  monitor_view.cpp  monitor_view.h  monitor_view.ui
src/ui/qml/: Main.qml  qml.qrc
src/ui/qml/components/: AppMenuBar.qml  ButtonBar.qml  ConfirmHandler.qml
src/ui/qml/details/: EditableCheckbox.qml  EditableNumericField.qml  EditableSingleField.qml  MonitorDetails.qml  MonitorDetailsEditableFields.qml  MonitorDetailsReadOnlyFields.qml
src/ui/qml/dialogs/: ConfirmDialog.qml
src/ui/qml/preview/: MonitorPreview.qml  MonitorRectangle.qml
src/ui/qml/screens/: MainScreen.qml  MonitorScreen.qml
src/ui/qtbridge/: qml_monitor.cpp  qml_monitor.h  qml_monitor_helpers.cpp  qml_monitor_helpers.h  qml_monitor_manager.cpp  qml_monitor_manager.h  qml_transform_helper.cpp  qml_transform_helper.h
src/utils/: hypr_monitor_parser.cpp  hypr_monitor_parser.h  monitor_parser.h
test/hyprview_core/managers/: monitor_manager_test.cpp
test/hyprview_core/models/: monitor_test.cpp
test/hyprview_core/parsers/: hypr_monitor_parser_test.cpp
test/hyprview_core/utils/: hypr_parser_test.cpp  monitor_geometry_test.cpp  monitor_helpers_test.cpp
test/managers/: hypr_monitor_manager.cpp
test/services/: hypr_monitor_manager_test.cpp
